--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,9 +1,9 @@
 [[language]]
 name = "rust"
 auto-format = true
-config.check.command = "clippy"
+# config.check.command = "clippy"
 
 # If this doesn't work, you might be on a older release version which handles this differently.
 # Try using [language.config.check] instead of [language-server.rust-analyzer.config.check]
-# [language-server.rust-analyzer.config.check]
-# command = "clippy"
+[language-server.rust-analyzer.config.check]
+command = "clippy"
