--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -1,8 +1,8 @@
-#? Config file for btop v. 1.3.0
+#? Config file for btop v. 1.3.2
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/nix/store/q4m5v0kxz6x9mv0ki8hvmpdlf1qhncsk-btop-1.3.0/share/btop/themes/tomorrow-night.theme"
+color_theme = "/nix/store/98rrxr5ws69cyb91vd203vkpfc2qcn34-btop-1.3.2/share/btop/themes/onedark.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -50,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "mem net proc cpu"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 100
@@ -202,7 +202,7 @@ net_download = 100
 net_upload = 100
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto = True
+net_auto = False
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
 net_sync = True
@@ -215,6 +215,9 @@ show_battery = False
 
 #* Which battery to use if multiple are present. "Auto" for auto detection.
 selected_battery = "Auto"
+
+#* Show power stats of battery next to charge indicator.
+show_battery_watts = True
 
 #* Set loglevel for "~/.config/btop/btop.log" levels are: "ERROR" "WARNING" "INFO" "DEBUG".
 #* The level set includes all lower levels, i.e. "DEBUG" will show all logging info.
