--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,22 +1,32 @@
-/* Highway */
-background            #212224
-foreground            #ededed
-cursor                #dfd9b8
-selection_background  #384563
-color0                #000000
-color8                #5c4f49
-color1                #cf0d17
-color9                #ef7d17
-color2                #128033
-color10               #b1d130
-color3                #ffca3d
-color11               #fff11f
-color4                #006ab3
-color12               #4fc2fd
-color5                #6a2674
-color13               #de0070
-color6                #384563
-color14               #5c4f49
-color7                #ededed
-color15               #fefffe
-selection_foreground #212224
+# One Dark by Giuseppe Cesarano, https://github.com/GiuseppeCesarano
+# This work is licensed under the terms of the GPL-2.0 license.
+# For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
+
+# Colors
+
+foreground #979eab
+background #282c34
+
+color0 #282c34
+color1 #e06c75
+color2 #98c379
+color3 #e5c07b
+color4 #61afef
+color5 #be5046
+color6 #56b6c2
+color7 #979eab
+color8 #393e48
+color9 #d19a66
+color10 #56b6c2
+color11 #e5c07b
+color12 #61afef
+color13 #be5046
+color14 #56b6c2
+color15 #abb2bf
+
+# Tab Bar
+
+active_tab_foreground   #282c34
+active_tab_background   #979eab
+inactive_tab_foreground #abb2bf
+inactive_tab_background #282c34
