change to use gpu

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,5 +1,5 @@
 fs=yes
-# hwdec=auto-safe
-# vo=gpu
-# profile=gpu-hq
-# gpu-context=wayland
+hwdec=auto-safe
+vo=gpu
+profile=gpu-hq
+gpu-context=wayland
